--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.profiles.active=dev
 
 default.sender=guilhermecadastros192@gmail.com
 default.recipient=guilhermecadastros192@gmail.com
+
+jwt.secret=SequenciaDeCaracteresParaAssinarToken
+jwt.expiration=60000
